syntax = "proto3";

package proto;
option go_package = "github.com/isard-vdi/isard/hyper/pkg/proto";

service Hyper {
    rpc DesktopStart(DesktopStartRequest) returns (DesktopStartResponse) {}
    rpc DesktopValidate(DesktopValidateRequest) returns (DesktopValidateResponse) {}
    rpc DesktopStop(DesktopStopRequest) returns (DesktopStopResponse) {}
    rpc DesktopResume(DesktopResumeRequest) returns (DesktopResumeResponse) {}
    rpc DesktopSuspend(DesktopSuspendRequest) returns (DesktopSuspendResponse) {}
    rpc DesktopSave(DesktopSaveRequest) returns (DesktopSaveResponse) {}
    rpc DesktopRestore(DesktopRestoreRequest) returns (DesktopRestoreResponse) {}    
    rpc DesktopXMLGet(DesktopXMLGetRequest) returns (DesktopXMLGetResponse) {}
    rpc DesktopList(DesktopListRequest) returns (DesktopListResponse) {}
    rpc DesktopMigrate(DesktopMigrateRequest) returns (DesktopMigrateResponse) {}
}

message DesktopStartRequest {
    string xml = 1;
}

message DesktopStartResponse {
    string xml = 1;
}

message DesktopValidateRequest {
    string xml = 1;
}

message DesktopValidateResponse {}

message DesktopStopRequest {
    string id = 1;
}

message DesktopStopResponse {}

message DesktopListRequest {}

message DesktopListResponse {
    repeated string ids = 1;
}

message DesktopXMLGetRequest {
    string id = 1;
}

message DesktopXMLGetResponse {
    string xml = 1;
}

message DesktopMigrateRequest {
    string id = 1;
    string hyper = 2;
}

message DesktopMigrateResponse {}

message DesktopResumeRequest {
    string id = 1;
}

message DesktopResumeResponse {}

message DesktopSuspendRequest {
    string id = 1;
}

message DesktopSuspendResponse {}

message DesktopRestoreRequest {
    string path = 1;
}

message DesktopRestoreResponse {}

message DesktopSaveRequest {
    string id = 1;
    string path = 2;
}

message DesktopSaveResponse {}